--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/navigation_movies"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_movies" />
+        android:title="@string/title_movies"
+        app:showAsAction="always"/>
 
     <item
         android:id="@+id/navigation_tv_shows"
         android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_tv_shows" />
+        android:title="@string/title_tv_shows"
+        app:showAsAction="always"/>
 
 </menu>
