--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -52,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lines="2"
-                android:background="@color/colorAccent"
+                android:background="@color/colorCloudWhite"
                 android:padding="@dimen/small"
                 android:text="@{movie.title}"
                 android:gravity="center"
