--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,12 +3,12 @@
     <style name="Theme.WisnuFebri" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryVariant">@color/colorAccent</item>
-        <item name="colorOnPrimary">@color/cardview_light_background</item>
+        <item name="colorPrimaryVariant">@color/colorCloudBlack</item>
+        <item name="colorOnPrimary">@color/colorDarkBlueSky</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/colorAccent</item>
-        <item name="colorSecondaryVariant">@color/colorPrimary</item>
-        <item name="colorOnSecondary">@color/colorPrimaryDark</item>
+        <item name="colorSecondary">@color/colorCloudBlack</item>
+        <item name="colorSecondaryVariant">@color/colorCloudWhite</item>
+        <item name="colorOnSecondary">@color/textColorPrimary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
