--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="progress_bar_size">25dp</dimen>
     <dimen name="spacing_xxxlarge">55dp</dimen>
     <dimen name="small">10dp</dimen>
+    <dimen name="menu_dimens">30dp</dimen>
     <dimen name="xsmall">5dp</dimen>
     <dimen name="smallx">15dp</dimen>
 
@@ -28,4 +29,5 @@
     <dimen name="spacing_middle">10dp</dimen>
     <dimen name="spacing_medium">5dp</dimen>
     <dimen name="spacing_xmedium">7dp</dimen>
+    <dimen name="spacing_large">15dp</dimen>
 </resources>
