--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -14,36 +14,45 @@
             type="com.test.wisnufebri.data.model.Video" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="14dp">
+        android:layout_margin="5dp"
+        app:cardElevation="2dp">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="162dp"
-            android:layout_height="108dp"
-            android:contentDescription="@string/video"
-            app:bind_video_thumbnail="@{video.key}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/backgrounds/scenic[1]" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <ImageButton
-            android:id="@+id/playImageButton"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:backgroundTint="@android:color/transparent"
-            android:contentDescription="@null"
-            android:onClick="@{() -> goToInterface.goTo(video)}"
-            android:scaleX="1.2"
-            android:scaleY="1.2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="162dp"
+                android:layout_height="108dp"
+                android:contentDescription="@string/video"
+                app:bind_video_thumbnail="@{video.key}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/backgrounds/scenic[1]" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageButton
+                android:id="@+id/playImageButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/transparent"
+                android:contentDescription="@null"
+                android:onClick="@{() -> goToInterface.goTo(video)}"
+                android:scaleX="1.2"
+                android:scaleY="1.2"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_play_circle_outline_24" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
 </layout>
