--- a/app/src/main/res/layout/list_item_cast.xml
+++ b/app/src/main/res/layout/list_item_cast.xml
@@ -16,38 +16,49 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="14dp"
+        android:layout_margin="5dp"
         android:clickable="true"
-        android:onClick="@{() ->goToInterface.goTo(cast)}">
+        android:onClick="@{() ->goToInterface.goTo(cast)}"
+        app:cardElevation="2dp"
+        app:cardPreventCornerOverlap="true">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="85dp"
-            android:layout_height="105dp"
-            android:contentDescription="@string/cast_image"
-            app:bind_profile_path="@{cast.profilePath}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars[0]" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/titleText"
-            style="@style/NunitoSemiBoldStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:alpha=".8"
-            android:ellipsize="end"
-            android:lines="2"
-            android:paddingTop="5dp"
-            android:text="@{cast.name}"
-            android:textSize="12sp"
-            app:layout_constraintLeft_toLeftOf="@id/image"
-            app:layout_constraintRight_toRightOf="@id/image"
-            app:layout_constraintTop_toBottomOf="@id/image"
-            tools:text="Name" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="85dp"
+                android:layout_height="105dp"
+                android:contentDescription="@string/cast_image"
+                app:bind_profile_path="@{cast.profilePath}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@tools:sample/avatars[0]" />
+
+            <TextView
+                android:id="@+id/titleText"
+                style="@style/NunitoSemiBoldStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:alpha=".8"
+                android:ellipsize="end"
+                android:lines="2"
+                android:paddingTop="5dp"
+                android:text="@{cast.name}"
+                android:textSize="12sp"
+                android:textAlignment="center"
+                app:layout_constraintLeft_toLeftOf="@id/image"
+                app:layout_constraintRight_toRightOf="@id/image"
+                app:layout_constraintTop_toBottomOf="@id/image"
+                tools:text="Name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </com.google.android.material.card.MaterialCardView>
 
 </layout>
