--- a/app/src/main/res/layout/list_item_video.xml
+++ b/app/src/main/res/layout/list_item_video.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        app:cardPreventCornerOverlap="true"
         app:cardElevation="2dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
